Map width fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -272,3 +272,8 @@ th {
     border-radius: 5px;
 }
 /*-----------------------------------------END GALLERY*/
+/*-----------------------------------------MAP*/
+.map {
+	width: -webkit-fill-available !important;
+}
+/*-----------------------------------------END MAP*/
