Map width fix commented out - when it's enabled, first background picture doesnt fit

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -273,7 +273,7 @@ th {
 }
 /*-----------------------------------------END GALLERY*/
 /*-----------------------------------------MAP*/
-.map {
+/* .map {
 	width: -webkit-fill-available !important;
-}
+} */
 /*-----------------------------------------END MAP*/
